@@ -31,7 +31,6 @@
  */
 $this->loadDataContainer('tl_iso_products');
 $this->loadLanguageFile('tl_iso_products');
-$this->loadLanguageFile('subdivisions');
 
 
 /**
@@ -51,6 +50,7 @@ $GLOBALS['TL_DCA']['tl_iso_shipping_modules'] = array
 		'onload_callback' => array
 		(
 			array('tl_iso_shipping_modules', 'checkPermission'),
+			array('IsotopeBackend', 'initializeSetupModule'),
 		),
 		'ondelete_callback'			  => array
 		(
@@ -72,7 +72,7 @@ $GLOBALS['TL_DCA']['tl_iso_shipping_modules'] = array
 		(
 			'fields'                  => array('name', 'type'),
 			'format'                  => '%s <span style="color:#b3b3b3; padding-left:3px;">[%s]</span>',
-			'label_callback'		  => array('tl_iso_shipping_modules', 'addIcon'),
+			'label_callback'		  => array('IsotopeBackend', 'addPublishIcon'),
 		),
 		'global_operations' => array
 		(
@@ -257,7 +257,7 @@ $GLOBALS['TL_DCA']['tl_iso_shipping_modules'] = array
 			'exclude'                 => true,
 			'sorting'                 => true,
 			'inputType'               => 'conditionalselect',
-			'options'				  => &$GLOBALS['TL_LANG']['DIV'],
+			'options_callback'		  => array('IsotopeBackend', 'getSubdivisions'),
 			'eval'                    => array('multiple'=>true, 'size'=>8, 'conditionField'=>'countries', 'tl_class'=>'w50 w50h'),
 		),
 		'minimum_total' => array
@@ -368,11 +368,6 @@ class tl_iso_shipping_modules extends Backend
 
 	public function checkPermission($dc)
 	{
-		if (strlen($this->Input->get('act')))
-		{
-			$GLOBALS['TL_DCA']['tl_iso_shipping_modules']['config']['closed'] = false;
-		}
-
 		// Hide archived (used and deleted) modules
 		$arrModules = $this->Database->execute("SELECT id FROM tl_iso_shipping_modules WHERE archive<2")->fetchEach('id');
 
@@ -461,25 +456,6 @@ class tl_iso_shipping_modules extends Backend
 		}
 
 		return $arrModules;
-	}
-
-
-	/**
-	 * Add an image to each record
-	 * @param array
-	 * @param string
-	 * @return string
-	 */
-	public function addIcon($row, $label)
-	{
-		$image = 'published';
-
-		if (!$row['enabled'])
-		{
-			$image = 'un'.$image;
-		}
-
-		return sprintf('<div class="list_icon" style="background-image:url(\'system/themes/%s/images/%s.gif\');">%s</div>', $this->getTheme(), $image, $label);
 	}
 }
 
